[gd_scene load_steps=71 format=3 uid="uid://dsy4mn8a4gob2"]

[ext_resource type="Script" uid="uid://kjvhpm5y61xb" path="res://addons/great_games_library/nodes/ResourceNode/ResourceNode.gd" id="1_dk003"]
[ext_resource type="Script" uid="uid://chy848pcntvu2" path="res://addons/great_games_library/nodes/ResourceNode/ResourceNodeItem.gd" id="2_cjv0e"]
[ext_resource type="Script" uid="uid://du71kf2skajm5" path="res://scripts/actors/actor_stats_resource.gd" id="3_lxrkv"]
[ext_resource type="Script" uid="uid://c4mj55eumewsg" path="res://scripts/damage/health_resource.gd" id="4_1xo3o"]
[ext_resource type="Script" uid="uid://0cwd4fq8k1sb" path="res://scripts/actors/push_resource.gd" id="5_asc3f"]
[ext_resource type="Script" uid="uid://b22fpyvusjwgn" path="res://addons/great_games_library/resources/ValueResource/BoolResource.gd" id="6_qw8gu"]
[ext_resource type="Script" uid="uid://umnrjhg4tkx8" path="res://scripts/input/InputResource.gd" id="7_rqgyj"]
[ext_resource type="Script" uid="uid://drjowwxypperd" path="res://scripts/damage/damage_resource.gd" id="8_6ckei"]
[ext_resource type="Script" uid="uid://cke22g3r77rke" path="res://addons/great_games_library/nodes/AreaTransmitter/AreaReceiver2D.gd" id="9_5m8yd"]
[ext_resource type="Script" uid="uid://djauem3ggp3vq" path="res://addons/great_games_library/nodes/AreaTransmitter/DataChannelReceiver.gd" id="10_nqfjh"]
[ext_resource type="Script" uid="uid://b32hc21y325hs" path="res://addons/great_games_library/nodes/AreaTransmitter/ShapeCastTransmitter2D.gd" id="11_vk0pf"]
[ext_resource type="Script" uid="uid://b0uw7wkj5ulcm" path="res://addons/great_games_library/nodes/AreaTransmitter/DataChannelTransmitter.gd" id="12_ky4sr"]
[ext_resource type="Script" uid="uid://bphd2malk5asy" path="res://scripts/damage/properties/DamageTypeResource.gd" id="13_xnjlv"]
[ext_resource type="Script" uid="uid://bdbat3453sctq" path="res://scripts/damage/properties/DamageDataResource.gd" id="14_hx1iv"]
[ext_resource type="Script" uid="uid://dg5sc14fyjex4" path="res://scripts/damage/properties/DamageStatusResource.gd" id="15_pa0jy"]
[ext_resource type="Texture2D" uid="uid://cxt0png484f33" path="res://assets/images/shadows/shadow_big.png" id="16_nalbe"]
[ext_resource type="Shader" uid="uid://mswl35phaudd" path="res://scripts/shaders/color_flash.gdshader" id="17_fv7ut"]
[ext_resource type="Texture2D" uid="uid://da8jrwe0b008i" path="res://assets/images/characters/big_jelly_64x64.png" id="18_g5q2d"]
[ext_resource type="Script" uid="uid://c12f5cgav5gvf" path="res://scripts/damage/damage_cooldown.gd" id="19_v8k4m"]
[ext_resource type="Script" uid="uid://cqvt1kclg83ve" path="res://scripts/actors/sprite_flip.gd" id="20_wuasj"]
[ext_resource type="Script" uid="uid://bjcvb5532mgfm" path="res://scripts/damage/actor_damage.gd" id="21_oyjsy"]
[ext_resource type="Resource" uid="uid://byppueuo3drya" path="res://resources/sounds/damage.tres" id="22_3qn4e"]
[ext_resource type="Resource" uid="uid://pvw6k1ntsles" path="res://resources/sounds/zombie_split.tres" id="23_f0l3d"]
[ext_resource type="Resource" uid="uid://c07axh6oa6x54" path="res://resources/instance_resources/vfx/big_jelly_landing_instance_resource.tres" id="24_r0d80"]
[ext_resource type="Script" uid="uid://cl1oxvv5a1qgf" path="res://scripts/actors/item_drop.gd" id="25_7vq0m"]
[ext_resource type="Script" uid="uid://c4vi4hfp1xokj" path="res://addons/great_games_library/resources/InstanceResource/InstanceResource.gd" id="26_4jxel"]
[ext_resource type="Resource" uid="uid://bc5djwa8gc2df" path="res://resources/instance_resources/pickups/health_pickup_instance_resource.tres" id="27_ybqp7"]
[ext_resource type="Script" uid="uid://dv83lyrd01i1q" path="res://scripts/actors/damage_display.gd" id="28_e6ket"]
[ext_resource type="Resource" uid="uid://xbek2osd7l4w" path="res://resources/instance_resources/vfx/damage_points_instance_resource.tres" id="29_0cb53"]
[ext_resource type="Script" uid="uid://b2pbj40ssvyeu" path="res://scripts/damage/damage_setup.gd" id="30_mdj1n"]
[ext_resource type="Script" uid="uid://dbfo8pojgaitr" path="res://scripts/damage/status_setup.gd" id="31_gb7qi"]
[ext_resource type="Script" uid="uid://302omst20xu3" path="res://scripts/actors/boss/big_jelly_ai.gd" id="32_2ujsr"]
[ext_resource type="Resource" uid="uid://b8o2o4evevl8k" path="res://resources/reference_node_resources/player_reference.tres" id="33_gdjj8"]
[ext_resource type="Script" uid="uid://d14gll06lnke3" path="res://scripts/actors/bots/active_enemy.gd" id="34_wucdo"]
[ext_resource type="Script" uid="uid://cg4cpkfi2f8c5" path="res://scripts/actors/boss/jump_move.gd" id="35_bbyd8"]
[ext_resource type="Resource" uid="uid://72qgb1882ssi" path="res://resources/sounds/big_jelly_jump.tres" id="36_2flo6"]
[ext_resource type="Resource" uid="uid://2oxos6r5uams" path="res://resources/sounds/big_jelly_land.tres" id="37_poy52"]
[ext_resource type="Script" uid="uid://xkuuvivo61ov" path="res://scripts/actors/boss/big_jelly_jump_damage.gd" id="38_q3nr3"]
[ext_resource type="Resource" uid="uid://dedx0gi4fowby" path="res://resources/global_resources/axis_multiplication_resource.tres" id="39_j4pwc"]
[ext_resource type="Script" uid="uid://brix4rfgs08gb" path="res://scripts/actors/boss/big_jelly_chase.gd" id="40_brorp"]
[ext_resource type="Script" uid="uid://dt2ldd2nvnunk" path="res://scripts/actors/boss/big_jelly_shoot_slime.gd" id="41_hkfee"]
[ext_resource type="Resource" uid="uid://3a6ok8ni15d1" path="res://resources/instance_resources/projectiles/big_jelly_projectile_instance_resource.tres" id="42_b6tmt"]
[ext_resource type="Resource" uid="uid://htqn5bygvbq5" path="res://resources/sounds/slime_throw.tres" id="43_8isgn"]

[sub_resource type="Resource" id="Resource_u7p0r"]
resource_name = "movement  properties"
script = ExtResource("3_lxrkv")
acceleration = 200.0
max_speed = 60.0
version = 0
not_saved = false

[sub_resource type="Resource" id="Resource_wkut0"]
resource_name = "movement"
script = ExtResource("2_cjv0e")
resource = SubResource("Resource_u7p0r")
make_unique = true
description = "ActorStatsResource probably need to be unique for each Actor type."

[sub_resource type="Resource" id="Resource_y76f1"]
resource_name = "Health resource"
script = ExtResource("4_1xo3o")
hp = 200.0
max_hp = 200.0
reset_hp = 200.0
reset_max_hp = 200.0
is_dead = false
version = 0
not_saved = false

[sub_resource type="Resource" id="Resource_vm74s"]
resource_name = "health"
script = ExtResource("2_cjv0e")
resource = SubResource("Resource_y76f1")
make_unique = true
description = ""

[sub_resource type="Resource" id="Resource_xhp0x"]
resource_name = "Push Resource"
script = ExtResource("5_asc3f")
version = 0
not_saved = false

[sub_resource type="Resource" id="Resource_ltyge"]
resource_name = "push"
script = ExtResource("2_cjv0e")
resource = SubResource("Resource_xhp0x")
make_unique = true
description = "PushResource has only a method to pass kickback or push impulse"

[sub_resource type="Resource" id="Resource_8r3vs"]
resource_name = "Dash bool"
script = ExtResource("6_qw8gu")
value = false
default_value = false
version = 0
not_saved = false

[sub_resource type="Resource" id="Resource_dsnfh"]
resource_name = "dash"
script = ExtResource("2_cjv0e")
resource = SubResource("Resource_8r3vs")
make_unique = true
description = "BoolResource that shows true when dash is enabled."

[sub_resource type="Resource" id="Resource_kivos"]
resource_name = "Hole bool"
script = ExtResource("6_qw8gu")
value = false
default_value = false
version = 0
not_saved = false

[sub_resource type="Resource" id="Resource_j3dss"]
resource_name = "hole"
script = ExtResource("2_cjv0e")
resource = SubResource("Resource_kivos")
make_unique = true
description = "BoolResource if value is true, it means actor fell in a hole"

[sub_resource type="Resource" id="Resource_k8ute"]
resource_name = "Input resource"
script = ExtResource("7_rqgyj")
axis = Vector2(0, 0)
action_1 = false
action_2 = false
aim_direction = Vector2(0, 0)
version = 0
not_saved = false

[sub_resource type="Resource" id="Resource_ju227"]
resource_name = "input"
script = ExtResource("2_cjv0e")
resource = SubResource("Resource_k8ute")
make_unique = true
description = "Used to control actors movement by it's input node.
"

[sub_resource type="Resource" id="Resource_1jkvc"]
resource_name = "Damage Resource"
script = ExtResource("8_6ckei")
can_receive_damage = true
version = 0
not_saved = false

[sub_resource type="Resource" id="Resource_tcmws"]
resource_name = "damage"
script = ExtResource("2_cjv0e")
resource = SubResource("Resource_1jkvc")
make_unique = true
description = "Receives report from delt and received damage."

[sub_resource type="CircleShape2D" id="CircleShape2D_j6ndo"]
radius = 32.0

[sub_resource type="CircleShape2D" id="CircleShape2D_we58e"]
radius = 32.0

[sub_resource type="Resource" id="Resource_bvgsl"]
script = ExtResource("13_xnjlv")
value = 10.0
type = 0

[sub_resource type="Resource" id="Resource_46ak6"]
script = ExtResource("14_hx1iv")
base_damage = Array[ExtResource("13_xnjlv")]([SubResource("Resource_bvgsl")])
critical_chance = 0.3
critical_multiply = 1.1
status_list = Array[ExtResource("15_pa0jy")]([])
hit_list = []
report_callback = Callable()
kickback_strength = 0.0
transmission_name = &"damage"
state = -1
valid = true
version = 0
not_saved = false

[sub_resource type="CircleShape2D" id="CircleShape2D_bxxbe"]
radius = 40.0

[sub_resource type="Resource" id="Resource_xt1ad"]
script = ExtResource("14_hx1iv")
base_damage = Array[ExtResource("13_xnjlv")]([])
critical_chance = 0.3
critical_multiply = 1.5
status_list = Array[ExtResource("15_pa0jy")]([])
hit_list = []
report_callback = Callable()
kickback_strength = 0.0
transmission_name = &"damage"
state = -1
valid = true
version = 0
not_saved = false

[sub_resource type="ShaderMaterial" id="ShaderMaterial_218jm"]
resource_local_to_scene = true
shader = ExtResource("17_fv7ut")
shader_parameter/overlay = Color(1, 1, 1, 1)
shader_parameter/blend = 0.0

[sub_resource type="Animation" id="Animation_itq31"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/blend")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_tledj"]
resource_name = "flash"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/blend")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.500001, 1),
"update": 0,
"values": [1.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(0.8, 1.279), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tbujk"]
_data = {
&"RESET": SubResource("Animation_itq31"),
&"flash": SubResource("Animation_tledj")
}

[sub_resource type="Resource" id="Resource_7pnyr"]
script = ExtResource("13_xnjlv")
value = 3.0
type = 0

[sub_resource type="Curve" id="Curve_51cb6"]
_limits = [-25.0, 1.0, 0.0, 1.0]
_data = [Vector2(0, 0), 0.0, -100.0, 0, 0, Vector2(0.5, -25), 0.0, 0.0, 0, 0, Vector2(1, 0), 100.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Curve" id="Curve_5pmbj"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 2.5, 0.0, 0, 0]
point_count = 2

[node name="BossSlime" type="CharacterBody2D"]
collision_layer = 0
floor_stop_on_slope = false
floor_constant_speed = true
floor_block_on_wall = false
platform_on_leave = 2
platform_floor_layers = 0

[node name="ResourceNode" type="Node" parent="."]
script = ExtResource("1_dk003")
list = Array[ExtResource("2_cjv0e")]([SubResource("Resource_wkut0"), SubResource("Resource_vm74s"), SubResource("Resource_ltyge"), SubResource("Resource_dsnfh"), SubResource("Resource_j3dss"), SubResource("Resource_ju227"), SubResource("Resource_tcmws")])

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -11)
scale = Vector2(1, 0.5)
shape = SubResource("CircleShape2D_j6ndo")

[node name="AreaReceiver2D" type="Area2D" parent="."]
position = Vector2(0, -11)
collision_layer = 4
collision_mask = 0
monitoring = false
script = ExtResource("9_5m8yd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaReceiver2D"]
scale = Vector2(1, 0.5)
shape = SubResource("CircleShape2D_we58e")

[node name="DamageDataReceiver" type="Node" parent="AreaReceiver2D" node_paths=PackedStringArray("area_receiver", "resource_node")]
script = ExtResource("10_nqfjh")
transmission_name = &"damage"
area_receiver = NodePath("..")
resource_node = NodePath("../../ResourceNode")

[node name="ShapeCastTransmitterDamage" type="ShapeCast2D" parent="."]
position = Vector2(0, -11)
scale = Vector2(1, 0.5)
enabled = false
shape = SubResource("CircleShape2D_we58e")
target_position = Vector2(0, 0)
collision_mask = 2
collide_with_areas = true
collide_with_bodies = false
script = ExtResource("11_vk0pf")

[node name="DamageDataTransmitter" type="Node" parent="ShapeCastTransmitterDamage"]
script = ExtResource("12_ky4sr")
try_next_frame = false
transmission_resource = SubResource("Resource_46ak6")

[node name="ShapeCastTransmitterPush" type="ShapeCast2D" parent="." node_paths=PackedStringArray("exclude_list")]
position = Vector2(0, -11)
scale = Vector2(1, 0.5)
enabled = false
shape = SubResource("CircleShape2D_bxxbe")
target_position = Vector2(0, 0)
collision_mask = 6
collide_with_areas = true
collide_with_bodies = false
script = ExtResource("11_vk0pf")
exclude_list = [NodePath("../AreaReceiver2D")]

[node name="DamageDataTransmitter" type="Node" parent="ShapeCastTransmitterPush"]
script = ExtResource("12_ky4sr")
try_next_frame = false
transmission_resource = SubResource("Resource_xt1ad")

[node name="Shadow" type="Sprite2D" parent="."]
modulate = Color(0.0196078, 0.0352941, 0.0784314, 0.454902)
position = Vector2(0, -11)
texture = ExtResource("16_nalbe")

[node name="Body" type="Node2D" parent="."]
position = Vector2(0, -11)

[node name="JellyStretch" type="Node2D" parent="Body"]

[node name="Stretch" type="Node2D" parent="Body/JellyStretch"]

[node name="Sprite2D" type="Sprite2D" parent="Body/JellyStretch/Stretch"]
material = SubResource("ShaderMaterial_218jm")
position = Vector2(0, -16)
texture = ExtResource("18_g5q2d")

[node name="CharacterAnimator" type="AnimationPlayer" parent="Body/JellyStretch/Stretch/Sprite2D"]

[node name="ColorFlash" type="AnimationPlayer" parent="Body/JellyStretch/Stretch/Sprite2D"]
libraries = {
&"": SubResource("AnimationLibrary_tbujk")
}

[node name="DamageCooldown" type="Node" parent="." node_paths=PackedStringArray("resource_node")]
script = ExtResource("19_v8k4m")
resource_node = NodePath("../ResourceNode")

[node name="SpriteFlip" type="Node" parent="." node_paths=PackedStringArray("resource_node", "flip_node")]
script = ExtResource("20_wuasj")
resource_node = NodePath("../ResourceNode")
flip_node = NodePath("../Body")

[node name="ActorDamage" type="Node" parent="." node_paths=PackedStringArray("resource_node", "sprite_flip", "flash_animation_player")]
script = ExtResource("21_oyjsy")
resource_node = NodePath("../ResourceNode")
sprite_flip = NodePath("../SpriteFlip")
flash_animation_player = NodePath("../Body/JellyStretch/Stretch/Sprite2D/ColorFlash")
flash_animation = &"flash"
sound_resource_damage = ExtResource("22_3qn4e")
sound_resource_dead = ExtResource("23_f0l3d")
dead_vfx_instance_resource = ExtResource("24_r0d80")

[node name="ItemDrop" type="Node" parent="." node_paths=PackedStringArray("resource_node", "root_node")]
script = ExtResource("25_7vq0m")
resource_node = NodePath("../ResourceNode")
root_node = NodePath("..")
drop_instance_resources = Array[ExtResource("26_4jxel")]([ExtResource("27_ybqp7")])

[node name="DamageDisplay" type="Node" parent="." node_paths=PackedStringArray("resource_node")]
script = ExtResource("28_e6ket")
resource_node = NodePath("../ResourceNode")
damage_points_instance_resource = ExtResource("29_0cb53")

[node name="DamageSetup" type="Node" parent="." node_paths=PackedStringArray("resource_node")]
script = ExtResource("30_mdj1n")
resource_node = NodePath("../ResourceNode")
resistance_list = Array[ExtResource("13_xnjlv")]([SubResource("Resource_7pnyr")])

[node name="StatusSetup" type="Node2D" parent="." node_paths=PackedStringArray("resource_node")]
script = ExtResource("31_gb7qi")
resource_node = NodePath("../ResourceNode")

[node name="BigJellyAi" type="Node" parent="." node_paths=PackedStringArray("chase", "actor_damage", "shoot_slime")]
script = ExtResource("32_2ujsr")
player_reference = ExtResource("33_gdjj8")
chase = NodePath("ChasePlayer")
actor_damage = NodePath("../ActorDamage")
shoot_slime = NodePath("ShootSlime")

[node name="ActiveEnemy" type="Node" parent="BigJellyAi" node_paths=PackedStringArray("listen_node", "resource_node")]
script = ExtResource("34_wucdo")
listen_node = NodePath("../../ActorDamage")
signal_name = &"actor_died"
resource_node = NodePath("../../ResourceNode")
destroy_children = true

[node name="JumpMove" type="Node" parent="BigJellyAi" node_paths=PackedStringArray("character_body", "sprite", "stretch_node")]
script = ExtResource("35_bbyd8")
character_body = NodePath("../..")
sprite = NodePath("../../Body/JellyStretch/Stretch/Sprite2D")
offset_curve = SubResource("Curve_51cb6")
stretch_node = NodePath("../../Body/JellyStretch")
jump_sound = ExtResource("36_2flo6")
land_sound = ExtResource("37_poy52")

[node name="JumpDamage" type="Node" parent="BigJellyAi" node_paths=PackedStringArray("jump_move", "chase_player", "area_receiver", "damage_transmitter", "push_transmitter", "push_channel_transmitter")]
script = ExtResource("38_q3nr3")
jump_move = NodePath("../JumpMove")
chase_player = NodePath("../ChasePlayer")
area_receiver = NodePath("../../AreaReceiver2D")
damage_transmitter = NodePath("../../ShapeCastTransmitterDamage")
push_transmitter = NodePath("../../ShapeCastTransmitterPush")
push_channel_transmitter = NodePath("../../ShapeCastTransmitterPush/DamageDataTransmitter")
axis_multiplication = ExtResource("39_j4pwc")
kickback_curve = SubResource("Curve_5pmbj")
kickback_max = 150.0
kickback_min = 40.0

[node name="ChasePlayer" type="Node" parent="BigJellyAi" node_paths=PackedStringArray("jump_move")]
script = ExtResource("40_brorp")
jump_move = NodePath("../JumpMove")
target_offset = Vector2(0, 11)
axis_multiplication = ExtResource("39_j4pwc")
landing_vfx = ExtResource("24_r0d80")

[node name="ShootSlime" type="Node" parent="BigJellyAi" node_paths=PackedStringArray("origin_node", "active_enemy")]
script = ExtResource("41_hkfee")
projectile_instance = ExtResource("42_b6tmt")
origin_node = NodePath("../../ShapeCastTransmitterDamage")
active_enemy = NodePath("../ActiveEnemy")
axis_multiply = ExtResource("39_j4pwc")
shoot_sound = ExtResource("43_8isgn")
